modified .timerow and dropshadow
FInished out the .timerow CSS by adding ::before and ::after while positioning each one relativley. Also added drop shadow to picture. Moved the title, website and like buttons to better match the mockup.

--- a/index.html
+++ b/index.html
@@ -24,24 +24,25 @@
       <div class="likerow">
           <!-- Another row for flexbox -->
         <div class="likebuttons">
-          <button class="b1-a bttn">
-            <i class="far fa-thumbs-up"></i>
+          <button class="b1 bttn">
+            <i class="fas fa-thumbs-up"></i>
             like
           </button>
-          <button class="b1-b bttn">
+          <button class="b2 bttn">
             <i class="fas fa-plus"></i>
             follow
           </button>
-          <button class="b1-c bttn">
+          <button class="b3 bttn">
             <i class="fas fa-comment-alt"></i>
             message
           </button>
-          <button class="b1-d bttn">
+          <button class="b4 bttn">
             <i class="fas fa-ellipsis-h"></i>
           </button>
         </div>
       </div>
       <!-- row with timeline for postioning -->
+      <div class="blank1"></div>
       <div class="timerow">
           <!-- row with timeline for flexbox -->
         <div class="timebuttons">
@@ -55,6 +56,7 @@
           </button>
         </div>
       </div>
+      
     </header>
     <!-- Bottom section -->
     <section>
