box-shadows and class names
added box shadows and changed some class names

--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
             <div class="gridi5">Like Comment Share</div>
           </div>
           <div class="item2 gridi">
-            <div class="items1"></div>
-            <div class="items2"></div>
-            <div class="items3"></div>
-            <div class="items4"></div>
-            <div class="items5"></div>
-            <div class="items6"></div>
-            <div class="items7"></div>
-            <div class="items8"></div>
-            <div class="items9"></div>
-            <div class="item10">Photos</div>
-            <div class="item11">&gt;</div>
+            <div class="items1 grids2"></div>
+            <div class="items2 grids2"></div>
+            <div class="items3 grids2"></div>
+            <div class="items4 grids2"></div>
+            <div class="items5 grids2"></div>
+            <div class="items6 grids2"></div>
+            <div class="items7 grids2"></div>
+            <div class="items8 grids2"></div>
+            <div class="items9 grids2"></div>
+            <div class="item10 grids2">Photos</div>
+            <div class="item11 grids2">&gt;</div>
           </div>
 
           <div class="item3 gridi">
